[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = "0.9.3"
nalgebra = "0.33.2"
rand = "0.9.0"

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
strip = true
build-override.strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false